[gd_scene load_steps=20 format=3 uid="uid://d1rmbn14vf54h"]

[ext_resource type="Script" path="res://gameObjects/levels/door.gd" id="1_i64xy"]
[ext_resource type="Texture2D" uid="uid://mxdp67340w1r" path="res://art/Props and Items/props and items x1.png" id="1_pl0ej"]
[ext_resource type="Texture2D" uid="uid://b4jkjhnnro4mw" path="res://art/UI/ui x1.png" id="2_h31y5"]
[ext_resource type="AudioStream" uid="uid://dvb72qwyupu1h" path="res://sfx/SCI-FI_UI_SFX_PACK/Tone1/Basic Tones/Tone1B.wav" id="4_vcgve"]
[ext_resource type="AudioStream" uid="uid://b7ogxsgp004ah" path="res://sfx/Space_Ambience_and_Sound_Pack/Custom/doorOpen.wav" id="5_wdwdu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y7y58"]
atlas = ExtResource("1_pl0ej")
region = Rect2(0, 512, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y725r"]
atlas = ExtResource("1_pl0ej")
region = Rect2(64, 512, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbbp4"]
atlas = ExtResource("1_pl0ej")
region = Rect2(128, 512, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8ore"]
atlas = ExtResource("1_pl0ej")
region = Rect2(192, 512, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nq36q"]
atlas = ExtResource("1_pl0ej")
region = Rect2(256, 512, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7567"]
atlas = ExtResource("1_pl0ej")
region = Rect2(320, 512, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x7on"]
atlas = ExtResource("1_pl0ej")
region = Rect2(576, 512, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_05ikb"]
atlas = ExtResource("1_pl0ej")
region = Rect2(640, 512, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tg0w1"]
atlas = ExtResource("1_pl0ej")
region = Rect2(704, 512, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pk76s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7y58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y725r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbbp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8ore")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nq36q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7567")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x7on")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05ikb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tg0w1")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xe8o2"]
size = Vector2(64, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_485c3"]
atlas = ExtResource("2_h31y5")
region = Rect2(265, 236, 13, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e3c7t"]
size = Vector2(68, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kry5"]
atlas = ExtResource("1_pl0ej")
region = Rect2(9, 169, 47, 22)

[node name="door" type="StaticBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_i64xy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pk76s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_xe8o2")

[node name="interactionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="TextureRect" type="TextureRect" parent="interactionArea"]
visible = false
offset_left = -12.0
offset_top = -15.0
offset_right = 5.0
offset_bottom = 1.0
texture = SubResource("AtlasTexture_485c3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactionArea"]
shape = SubResource("RectangleShape2D_e3c7t")

[node name="inputHandler" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="inputHandler"]
layout_mode = 0
offset_left = -51.0
offset_top = -53.0
offset_right = 51.0
offset_bottom = -17.0
texture = SubResource("AtlasTexture_6kry5")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="inputHandler"]
layout_mode = 0
offset_left = -42.0
offset_top = -43.0
offset_right = 251.0
scale = Vector2(0.3, 0.3)
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="inputHandler"]
visible = false
layout_mode = 0
offset_left = -38.0
offset_top = -75.0
offset_right = 39.0
offset_bottom = -56.0

[node name="HBoxContainer2" type="HBoxContainer" parent="inputHandler/Panel"]
layout_mode = 0
offset_left = 1.0
offset_top = 4.0
offset_right = 248.0
offset_bottom = 47.0
scale = Vector2(0.3, 0.3)
alignment = 1

[node name="SFX" type="Node" parent="."]

[node name="inputSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("4_vcgve")

[node name="openSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("5_wdwdu")

[connection signal="body_entered" from="interactionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="interactionArea" to="." method="_on_interaction_area_body_exited"]
